added commons-csv and guava to the project

--- a/core/genometryImpl/ant.properties
+++ b/core/genometryImpl/ant.properties
@@ -1,6 +1,6 @@
 name=Genometry
 project=genometry
-classpath=${genometry}/build:${common}/build:${jar_extensions}/sam/build:${jar_extensions}/tribble/build:${osgi.impl}:${lib.dir}/BigWig.jar:${lib.dir}/image4j.jar:${lib.dir}/affx_fusion.jar:${lib.dir}/commons-codec-1.4.jar:${lib.dir}/sam.jar::${lib.dir}/picard.jar:${lib.dir}/colt.jar:${lib.dir}/tribble.jar:${lib.dir}/commons-net-2.0.jar:${lib.dir}/commons-lang3-3.1.jar:${lib.dir}/jdom-1.1.3.jar:${lib.dir}/log4j-1.2.11.jar:${lib.dir}/commons-pool-1.6.jar:${lib.dir}/commons-compress-1.6.jar
+classpath=${genometry}/build:${common}/build:${jar_extensions}/sam/build:${jar_extensions}/tribble/build:${osgi.impl}:${lib.dir}/BigWig.jar:${lib.dir}/image4j.jar:${lib.dir}/affx_fusion.jar:${lib.dir}/commons-codec-1.4.jar:${lib.dir}/sam.jar::${lib.dir}/picard.jar:${lib.dir}/colt.jar:${lib.dir}/tribble.jar:${lib.dir}/commons-net-2.0.jar:${lib.dir}/commons-lang3-3.1.jar:${lib.dir}/jdom-1.1.3.jar:${lib.dir}/log4j-1.2.11.jar:${lib.dir}/commons-pool-1.6.jar:${lib.dir}/commons-compress-1.6.jar:${lib.dir}/commons-csv-1.0.jar:${lib.dir}/guava-16.0.1.jar
 test.classpath=${classpath}:${genometry}/build-test
 report.classpath=${classpath}
 plugin-jar=true
