added guava to classpath of das2_server bundle

--- a/das2_server/ant.properties
+++ b/das2_server/ant.properties
@@ -1,5 +1,5 @@
 name=DAS/2 Server
 project=das2server
-classpath=${genometry}/build:${lib.dir}/sam.jar:${lib.dir}/picard.jar:${lib.dir}/javax.servlet.jar:${lib.dir}/org.mortbay.jetty.jar:${lib.dir}/cos.jar:${lib.dir}/log4j-1.2.11.jar:${lib.dir}/hibernate3.jar:${lib.dir}/dom4j-1.6.1.jar:${lib.dir}/dom4j-1.6.1.jar:${lib.dir}/commons-compress-1.6.jar:${lib.dir}/picard.jar:${lib.dir}/sam.jar:${lib.dir}/gnomex.jar:${lib.dir}/HCIDictionary.jar:${lib.dir}/Hibernate3Utils.jar:${lib.dir}/hci_utils.jar:${lib.dir}/hci_framework.jar:${lib.dir}/jdom.jar
+classpath=${genometry}/build:${lib.dir}/sam.jar:${lib.dir}/picard.jar:${lib.dir}/javax.servlet.jar:${lib.dir}/org.mortbay.jetty.jar:${lib.dir}/cos.jar:${lib.dir}/log4j-1.2.11.jar:${lib.dir}/hibernate3.jar:${lib.dir}/dom4j-1.6.1.jar:${lib.dir}/dom4j-1.6.1.jar:${lib.dir}/commons-compress-1.6.jar:${lib.dir}/picard.jar:${lib.dir}/sam.jar:${lib.dir}/gnomex.jar:${lib.dir}/HCIDictionary.jar:${lib.dir}/Hibernate3Utils.jar:${lib.dir}/hci_utils.jar:${lib.dir}/hci_framework.jar:${lib.dir}/jdom.jar:${lib.dir}/guava-16.0.1.jar
 test.classpath=${classpath}:${common}/build:${das2server}/build:${das2server}/build-test
 report.classpath=${classpath}:${lib.dir}/image4j.jar:${lib.dir}/jta.jar:${lib.dir}/commons-logging-1.0.4.jar
