--- a/plugins/Bookmark/ant.properties
+++ b/plugins/Bookmark/ant.properties
@@ -1,4 +1,4 @@
 name=Bookmark
 project=Bookmark
-classpath=${common}/build:${igb_service}/build:${window_service}/build:${igb}/build:${genometry}/build:${lib.dir}/swing-layout.jar:${lib.dir}/jide.jar:${genoviz}/build:${osgi.impl}:./lib/nanohttpd-webserver-2.0.5.jar:${lib.dir}/commons-io-2.4.jar:${lib.dir}/commons-lang3-3.1.jar
+classpath=${common}/build:${igb_service}/build:${window_service}/build:${igb}/build:${genometry}/build:${lib.dir}/swing-layout.jar:${lib.dir}/jide.jar:${genoviz}/build:${osgi.impl}:./lib/nanohttpd-webserver-2.0.5.jar:${lib.dir}/commons-io-2.4.jar:${lib.dir}/commons-lang3-3.1.jar:${lib.dir}/guava-16.0.1.jar
 plugin-jar=true
