updated build to include support for new unit tests in bookmarks plugin

--- a/plugins/Bookmark/ant.properties
+++ b/plugins/Bookmark/ant.properties
@@ -1,4 +1,5 @@
 name=Bookmark
 project=Bookmark
-classpath=${common}/build:${igb_service}/build:${window_service}/build:${igb}/build:${genometry}/build:${lib.dir}/swing-layout.jar:${lib.dir}/jide.jar:${genoviz}/build:${osgi.impl}:./lib/nanohttpd-webserver-2.0.5.jar:${lib.dir}/commons-io-2.4.jar:${lib.dir}/commons-lang3-3.1.jar:${lib.dir}/guava-16.0.1.jar
+classpath=${Bookmark}/build:${common}/build:${igb_service}/build:${window_service}/build:${igb}/build:${genometry}/build:${lib.dir}/swing-layout.jar:${lib.dir}/jide.jar:${genoviz}/build:${osgi.impl}:./lib/nanohttpd-webserver-2.0.5.jar:${lib.dir}/commons-io-2.4.jar:${lib.dir}/commons-lang3-3.1.jar:${lib.dir}/guava-16.0.1.jar
+test.classpath=${classpath}:${Bookmark}/build-test
 plugin-jar=true
