Added support for bookmark urls from galaxy with unrecognized version

--- a/core/igb_service/ant.properties
+++ b/core/igb_service/ant.properties
@@ -1,5 +1,5 @@
 name=IGB Service
 project=igb_service
-classpath=${common}/build:${genoviz}/build:${genometry}/build:${osgi.impl}
+classpath=${common}/build:${genoviz}/build:${genometry}/build:${osgi.impl}:${igb}/build:${lib.dir}/commons-lang3-3.1.jar:${lib.dir}/guava-16.0.1.jar
 report.classpath=${classpath}
 plugin-jar=true
