--- a/core/igb/resources/igb.properties
+++ b/core/igb/resources/igb.properties
@@ -173,7 +173,7 @@ changeBGColorAction=Change BackGround Color
 changeExpandMaxAction=Change Stack Height for Selected Annotation Tracks
 changeExpandMaxAllAction=Adjust Max Stack Height All...
 changeExpandMaxOptimizeAction=Optimize Stack Height for Selected Annotation Tracks
-useResidueMask=Show Mismatch Only
+useResidueMask=Show mismatched bases
 shadeBasedOnQualityScore=Shade bases using quality score
 #Optimize button in annotation tab has this tooptip in hard code.
 changeTierHeightAction=Change Height
