Updated Text per IGBE-145 Task #IGBE-145 - change "Shade bases by quality score" to "Shade base by quality"

--- a/core/igb/resources/igb.properties
+++ b/core/igb/resources/igb.properties
@@ -174,7 +174,7 @@ changeExpandMaxAction=Change Stack Height for Selected Annotation Tracks
 changeExpandMaxAllAction=Adjust Max Stack Height All...
 changeExpandMaxOptimizeAction=Optimize Stack Height for Selected Annotation Tracks
 useResidueMask=Show mismatched bases
-shadeBasedOnQualityScore=Shade bases using quality score
+shadeBasedOnQualityScore=Shade base by quality
 #Optimize button in annotation tab has this tooptip in hard code.
 changeTierHeightAction=Change Height
 changeLabelColorAction=Change Track Label Color
