IGBF-38 Setting the default name to IGB. Moving the strings to bundle .

--- a/core/igb/resources/igb.properties
+++ b/core/igb/resources/igb.properties
@@ -407,3 +407,6 @@ toggleConstantPropertiesTooltip=Show Constant Properties in Tooltip.
 hideDataTooltip=Hide data tooltips. Affects main view only.
 showDataTooltip=Show data tooltips. Affects main view only.
 selectionInforTooltip=Click to get information about selected item.
+
+defaultExportFileName=IGB
+exportDialogTitle=Export Image
