modifications to core/common build configuration for new project structure

--- a/core/common/ant.properties
+++ b/core/common/ant.properties
@@ -1,4 +1,4 @@
 name=common
 project=common
-classpath=${osgi.impl}
+classpath=${osgi.impl}:${lib.dir}/tango-icon-theme-osgi-1.0.jar
 plugin-jar=true
