fixed build broken during changes to project structure

--- a/plugins/BigBedHandler/ant.properties
+++ b/plugins/BigBedHandler/ant.properties
@@ -1,4 +1,4 @@
 name=BigBedHandler
 project=BigBedHandler
-classpath=${igb_service}/build:${genometry}/build:${common}/build:${lib.dir}/BigWig.jar:.${lib.dir}/tribble.jar:${jar_extensions}/tribble/build:${osgi.impl}
+classpath=${igb_service}/build:${genometry}/build:${common}/build:${lib.dir}/BigWig.jar:${lib.dir}/tribble.jar:${osgi.impl}
 plugin-jar=true
