--- a/plugins/BigWigHandler/ant.properties
+++ b/plugins/BigWigHandler/ant.properties
@@ -1,4 +1,4 @@
 name=BigWigHandler
 project=BigWigHandler
-classpath=${igb_service}/build:${genometry}/build:${lib.dir}/genoviz-1.0.jar:${igb}/build:${common}/build:${lib.dir}/colt.jar:${lib.dir}/BigWig.jar:.${lib.dir}/tribble.jar:${jar_extensions}/tribble/build:${osgi.impl}:${lib.dir}/igbSwingExt-1.0.jar
+classpath=${igb_service}/build:${genometry}/build:${lib.dir}/genoviz-1.0.jar:${igb}/build:${common}/build:${lib.dir}/colt.jar:${lib.dir}/BigWig.jar:${osgi.impl}:${lib.dir}/igbSwingExt-1.0.jar:${lib.dir}/tribble.jar
 plugin-jar=true
