--- a/build.xml
+++ b/build.xml
@@ -61,7 +61,7 @@
 		<property name="def.prefs.dir"       value="${basedir}/core/igb/resources" />
 		
 		<!-- list the libraries to create bundle -->
-		<property name="include.lib" value="affx_fusion,be.pwnt.jflow_1.0.0,freehep-2.1.1,jdom-1.1.3,colt,commons-net-2.0,image4j,jide,jlfgr-1_0,log4j-1.2.11,picard,swing-layout,ant-1.7.1,lambdaj-2.4-with-dependencies,JGoogleAnalytics_0.4,commons-io-2.4,commons-csv-1.0,guava-16.0.1,genoviz-1.0,igbSwingExt-1.0"/>
+		<property name="include.lib" value="affx_fusion,be.pwnt.jflow_1.0.0,freehep-2.1.1,jdom-1.1.3,colt,commons-net-2.0,image4j,jide,jlfgr-1_0,log4j-1.2.11,picard,swing-layout,ant-1.7.1,lambdaj-2.4-with-dependencies,JGoogleAnalytics_0.4,commons-io-2.4,commons-csv-1.0,guava-16.0.1,genoviz-1.0,igbSwingExt-1.0,sam,tribble"/>
 	
 		<!-- list the libraries to copy -->
 		<property name="copy.lib" value="BigWig,commons-codec-1.4,commons-lang3-3.1,commons-pool-1.6,commons-compress-1.6"/>
