fixed mistake in ant properties reference to genoviz for classpath

--- a/plugins/SearchModeSymmetryFilter/ant.properties
+++ b/plugins/SearchModeSymmetryFilter/ant.properties
@@ -1,5 +1,5 @@
 name=SearchModeSymmetryFilter
 project=SearchModeSymmetryFilter
-classpath=${igb_service}/${lib.dir}/genoviz-1.0.jar/build:${genometry}/build:${igb}/build:${common}/build:${osgi.impl}:${lib.dir}/igbSwingExt-1.0.jar
+classpath=${igb_service}/build:${lib.dir}/genoviz-1.0.jar:${genometry}/build:${igb}/build:${common}/build:${osgi.impl}
 report.classpath=${classpath}
 plugin-jar=true
