--- a/plugins/TranscriptIsoform/ant.properties
+++ b/plugins/TranscriptIsoform/ant.properties
@@ -1,4 +1,4 @@
 name=TranscriptIsoform
 project=TranscriptIsoform
-classpath=${common}/build:${igb_service}/build:${window_service}/build:${igb}/build:${genometry}/build:${lib.dir}/genoviz-1.0.jar:${sam}/dist/sam--igbext.jar:${osgi.impl}:${lib.dir}/igbSwingExt-1.0.jar
+classpath=${common}/build:${igb_service}/build:${window_service}/build:${igb}/build:${genometry}/build:${lib.dir}/genoviz-1.0.jar:${lib.dir}/sam.jar:${osgi.impl}:${lib.dir}/igbSwingExt-1.0.jar
 plugin-jar=true
