--- a/build.xml
+++ b/build.xml
@@ -24,7 +24,6 @@
 		<property name="window_service"      value="${basedir}/core/window_service" />
 		<property name="HeatmapEditor"		 value="${basedir}/core/HeatmapEditor" />
 		<property name="window_service_def"  value="${basedir}/plugins/window_service_def" />
-		<property name="das2server"          value="${basedir}/das2_server" />
 
 		<!-- Locations of optional bundle subprojects -->
 		<property name="BigBedHandler"       value="${basedir}/plugins/BigBedHandler" />
@@ -50,7 +49,6 @@
 		<!-- directory paths -->
 		<property name="dist.dir"			 value="${basedir}/dist" />
 		<property name="webstart.dir"		 value="${dist.dir}/webstart" />
-		<property name="webapp.dir"			 value="${dist.dir}/webapp" />
 		<property name="release.dir"		 value="${dist.dir}/release" />
 		<property name="lib.dir"			 value="${basedir}/ext" />
 		<property name="etc.dir"			 value="${basedir}/etc" />
@@ -61,43 +59,18 @@
 		<property name="def.prefs.dir"       value="${basedir}/core/igb/resources" />
 		
 		<!-- list the libraries to create bundle -->
-		<property name="include.lib" value="affx_fusion,be.pwnt.jflow_1.0.0,freehep-2.1.1,jdom-1.1.3,colt,commons-net-2.0,image4j,jide,jlfgr-1_0,log4j-1.2.11,picard,swing-layout,ant-1.7.1,lambdaj-2.4-with-dependencies,JGoogleAnalytics_0.4,commons-io-2.4,commons-csv-1.0,guava-16.0.1,genoviz-1.0,igbSwingExt-1.0,sam,tribble"/>
+		<property name="include.lib" value="affx_fusion,be.pwnt.jflow_1.0.0,freehep-2.1.1,jdom-1.1.3,colt,commons-net-2.0,image4j,jide,jlfgr-1_0,log4j-1.2.11,picard,swing-layout,lambdaj-2.4-with-dependencies,JGoogleAnalytics_0.4,commons-io-2.4,commons-csv-1.0,guava-16.0.1,genoviz-1.0,igbSwingExt-1.0,sam,tribble"/>
 	
 		<!-- list the libraries to copy -->
 		<property name="copy.lib" value="BigWig,commons-codec-1.4,commons-lang3-3.1,commons-pool-1.6,commons-compress-1.6"/>
 		
 		<property name="osgi.impl"   value="${osgi.impl.dir}${osgi.impl.file}"/>
-		<property name="javadoc.src.path"   value="${common}/src:${genometry}/src:${genometry}/test:${igb}/src:${igb}/test:${das2server}/src:${das2server}/test:${protannot}/src:${igb_service}/src:${window_service}/src" />
+		<property name="javadoc.src.path"   value="${common}/src:${genometry}/src:${genometry}/test:${igb}/src:${igb}/test:${igb_service}/src:${window_service}/src" />
 		<property file="${common}/resources/common.properties"/>
 	</target>
 
 	<target name="compile" depends="common-init" description="Compile all genoviz subprojects">
 		<iterate target="compile" />
-	</target>
-
-	<target name="flex" if="should_compile_flex" depends="common-init" description="Compile Flex GenoPub application">
-		<taskdef resource="flexTasks.tasks" classpath="${FLEX_HOME}/ant/lib/flexTasks.jar"/>
-		
-		<mxmlc fork="true" maxmemory="128m" file="${das2server}/flex/GenoPub.mxml" output="${webapp.dir}/GenoPub.swf">
-			<theme dir="${FLEX_HOME}/frameworks/themes/Halo">
-					       <include name="halo.swc" />
-					</theme>
-			<load-config filename="${FLEX_HOME}/frameworks/flex-config.xml"/>
-	        <source-path path-element="${FLEX_HOME}/frameworks"/>
-			    <compiler.debug>true</compiler.debug>
-		</mxmlc>
-		<html-wrapper
-		      title="GenoPub"
-		      file="GenoPub.html"
-		      width="100%"
-		      height="100%"
-		      application="GenoPub"
-		      swf="GenoPub"
-		      version-major="10"
-		      version-minor="0"
-		      version-revision="0"
-		      history="false"
-		      output="${webapp.dir}"/>
 	</target>
 
 	<target name="compile-tests" depends="common-init">
@@ -186,8 +159,6 @@
 	<target name="webstart" depends="jar, bundles_properties" description="Create webstart-compatible IGB jars">
 		<mkdir dir="${webstart.dir}" />
 
-<!--		<delete file="${webstart.dir}/das2server.jar" />-->
-		
 		<copy file="${def.prefs.dir}/igb_default_prefs.xml" tofile="${webstart.dir}/igb_prefs.xml" />
 		<copy file="${jnlp.icon.path}" tofile="${webstart.dir}/${jnlp.icon.name}" />
 <!--		<copy file="${jnlp.splashicon.path}" tofile="${webstart.dir}/${jnlp.splashicon.name}" />-->
@@ -259,125 +230,6 @@
 		<copy file="${main}/resources/config.properties" tofile="${main}/build/config.properties" overwrite="true" filtering="true" />
 	</target>
 
-	<target name="webapp" depends="jar,flex" description="Create das2servlet web application">
-		<mkdir dir="${webapp.dir}/WEB-INF/classes" />
-		<mkdir dir="${webapp.dir}/WEB-INF/lib" />
-
-		<copy todir="${webapp.dir}" overwrite="true">
-			<fileset dir="${das2server}">
-				<include name="*.css" />
-				<include name="index.html" />
-				<include name="*.ico" />
-				<include name="*.png" />
-			</fileset>
-		</copy>
-
-		<copy todir="${webapp.dir}/WEB-INF/classes">
-			<fileset dir="${das2.resources}">
-				<include name="das2Registry.xml" />
-				<include name="logging.properties" />
-			</fileset>
-		</copy>
-
-		<copy todir="${webapp.dir}/WEB-INF/lib">
-			<fileset dir="${lib.dir}">
-				<include name="image4.jar" />
-				<include name="org.mortbay.jetty.jar"/>
-				<include name="sam.jar" />
-				<include name="picard.jar" />
-				<include name="swing-layout.jar" />
-			</fileset>
-			<fileset dir="${dist.dir}">
-				<include name="das2server.jar" />
-				<include name="common.jar" />
-				<include name="genometry.jar" />
-				<include name="protannot.jar" />
-			</fileset>
-		</copy>
-
-		<antcall target="webapp-copy-genopub-files"/>
-		<antcall target="webapp-copy-gnomex-files"/>
-
-		<copy file="${web.xml}" tofile="${webapp.dir}/WEB-INF/web.xml" overwrite="true"/>
-		<copy file="${context.xml}" tofile="${webapp.dir}/META-INF/context.xml" overwrite="true"/>
-	</target>
-
-	<target name="webapp-copy-genopub-files" if="das2genopub">
-		<copy todir="${webapp.dir}/WEB-INF/classes">
-			<fileset dir="${das2.resources}">
-				<include name="hibernate.cfg.xml" />
-				<include name="genopub.hbm.xml" />
-				<include name="log4j.properties" />
-			</fileset>
-		</copy>
-		
-		<copy todir="${webapp.dir}/WEB-INF/lib">
-			<fileset dir="${lib.dir}">
-				<include name="antlr-2.7.6rc1.jar"/>
-				<include name="asm.jar" />
-				<include name="asm-attrs.jar" />
-				<include name="cglib-2.1.3.jar" />
-				<include name="common.jar" />
-				<include name="commons-collections-2.1.1.jar"/>
-				<include name="commons-codec-1.4.jar"/>
-				<include name="commons-compress-1.6.jar"/>
-				<include name="commons-logging-1.0.4.jar"/>
-				<include name="cos.jar"/>
-				<include name="dom4j-1.6.1.jar"/>
-				<include name="jta.jar" />
-				<include name="log4j-1.2.11.jar"/>
-				<include name="sam.jar" />
-				<include name="picard.jar" />
-				<include name="hibernate3.jar" />
-			</fileset>
-    </copy>
-	</target>
-
-	<target name="webapp-copy-gnomex-files" if="das2gnomex">
-		<copy todir="${webapp.dir}/WEB-INF/classes">
-			<fileset dir="${das2.resources}">
-				<include name="hibernate.gnomex.cfg.xml" />
-				<include name="SchemaGNomEx.hbm.xml" />
-				<include name="log4j.properties" />
-			</fileset>
-		</copy>
-		
-		<mkdir dir="${webapp.dir}/UCSCExecutables" />
-		<copy todir="${webapp.dir}/UCSCExecutables">
-			<fileset dir="${das2.UCSCExecutables}">
-				<include name="bedToBigBed" />
-				<include name="readMe.txt" />
-				<include name="wigToBigWig" />
-			</fileset>
-		</copy>
-		
-		<copy todir="${webapp.dir}/WEB-INF/lib">
-			<fileset dir="${lib.dir}">
-				<include name="antlr-2.7.6rc1.jar"/>
-				<include name="asm.jar" />
-				<include name="asm-attrs.jar" />
-				<include name="cglib-2.1.3.jar" />
-				<include name="commons-collections-2.1.1.jar"/>
-				<include name="commons-codec-1.4.jar"/>
-				<include name="commons-compress-1.6.jar"/>
-				<include name="commons-logging-1.0.4.jar"/>
-				<include name="cos.jar"/>
-				<include name="dom4j-1.6.1.jar"/>
-				<include name="jta.jar" />
-				<include name="log4j-1.2.11.jar"/>
-				<include name="sam.jar" />
-				<include name="picard.jar" />
-				<include name="HCIDictionary.jar" />
-				<include name="Hibernate3Utils.jar" />
-				<include name="hci_utils.jar" />
-				<include name="hci_framework.jar" />
-				<include name="hibernate3.jar" />
-				<include name="gnomex.jar" />
-				<include name="jdom.jar"/>
-			</fileset>
-		</copy>
-	</target>
-
 	<target name="cbc" depends="compiler-def-args,init" description="clear bundle cache">
 		<mkdir dir="${bundle.dir}" />
 		<subant target="compile" genericantfile="generic.xml" inheritall="true">
@@ -407,33 +259,12 @@
 		<iterate target="all" />
 	</target>
 
-	<target name="report" depends="test,docs,pmd,cpd,findbugs" description="Generate reports about the project" />
-
-	<target name="pmd" depends="common-init,pmd-init" if="have.pmd" description="run pmd static analysis program">
-		<iterate target="pmd" />
-	</target>
-
-	<target name="cpd" depends="common-init,cpd-init" if="have.cpd" description="run pmd's cut and paste detection">
-		<mkdir dir="${report.dir}/xml" />
-		<my.cpd outputFile="${report.dir}/xml/cpd.xml">
-			<fileset dir=".">
-				<exclude name="*/test/**/*.java" />
-				<exclude name="*/demo/**/*.java" />
-				<include name="**/*.java" />
-			</fileset>
-		</my.cpd>
-		<xslt in="${report.dir}/xml/cpd.xml" style="${etc.dir}/cpdhtml.xslt" out="${report.dir}/cpd.html" />
-	</target>
-
-	<target name="findbugs" depends="compile,common-init,findbugs-init" if="have.findbugs" description="run findbugs static analysis program">
-		<iterate target="findbugs" />
-	</target>
+	<target name="report" depends="test,docs" description="Generate reports about the project" />
 
 	<target name="clean" depends="init">
 		<delete includeEmptyDirs="true" quiet="true">
 			<fileset dir="${dist.dir}" />
 			<fileset dir="${webstart.dir}" />
-			<fileset dir="${webapp.dir}" />
 			<fileset dir="${report.dir}" />
 			<fileset dir="${basedir}/build" />
 			<fileset dir="${work.dir}" />
@@ -637,55 +468,6 @@
 		</exec>
 	</target>
 
-	<target name="release-das2server" depends="common-init">
-		<mkdir dir="${release.dir}/${das2_release}" />
-
-		<antcall target="webapp">
-			<param name="webapp.dir" value="${release.dir}/${das2_release}/${das2_webapp}" />
-		</antcall>
-
-		<copy todir="${release.dir}/${das2_release}">
-			<fileset dir="${basedir}">
-				<include name="NOTICES.txt" />
-				<include name="RELEASES.txt" />
-				<include name="LICENSE.html" />
-			</fileset>
-			<fileset file="${lib.dir}/APACHE_LICENSE_2.txt" />
-		</copy>
-		
-		<copy  file="${das2server}/${das2_install_notes}" tofile="${release.dir}/${das2_release}/INSTALL.txt" overwrite="true"/>
-
-	    <antcall target="release-copy-genopub-sql"/>
-	    <antcall target="release-copy-realm-jars"/>
-
-		<zip destfile="${release.dir}/${das2_release}.zip" basedir="${release.dir}">
-			<include name="${das2_release}/**" />
-		</zip>
-	</target>
-
-	<target name="release-copy-genopub-sql" if="das2genopub">
-		<copy todir="${release.dir}/${das2_release}/sql">
-			<fileset file="${das2server}/sql/*.sql" />
-		</copy>
-	</target>
-	
-	<target name="release-copy-realm-jars" if="das2gnomex">
-		<copy todir="${release.dir}/${das2_release}/tomcat/server/lib">
-			<fileset dir="${lib.dir}">
-				<include name="commons-codec-1.4.jar" />
-				<include name="gnomex_realm.jar" />
-			</fileset>
-		</copy>
-	</target>
-
-	<target name="deploy-das2server" depends="release-das2server" description="Copy das2 web application to apache tomcat">
-		<copy todir="${server.deploy.dir}/${das2_webapp}" overwrite="true">
-			<fileset dir="${release.dir}/${das2_release}/${das2_webapp}">
-				<include name="**/*" />
-			</fileset>
-		</copy>
-	</target>
-
 	<target name="release-igb-webstart" depends="common-init">
 		<mkdir dir="${release.dir}/igb-webstart" />
 
@@ -733,9 +515,6 @@
 	<macrodef name="iterate">
 		<attribute name="target" default=""/>
 		<sequential>
-			<condition property="findbugs">
-				<equals arg1="@{target}" arg2="findbugs" />
-			</condition>
 			<iterate-core target="@{target}" />
 			<iterate-plugins target="@{target}" />
 		</sequential>
@@ -776,13 +555,8 @@
 					<include name="window_service_def" />
 				</dirset>
 				<filelist dir="${basedir}/plugins" files="${include.bundles}"/> 
-				<dirset dir="${basedir}">
-					<include name="protannot" />
-					<include name="das2_server" />
-				</dirset>
 				<dirset dir="${basedir}/core">
 					<include name="main" />
-					<include name="igb-i18n" unless="findbugs" />
 				</dirset>
 			</subant>
 		</sequential>
@@ -830,32 +604,32 @@
    The visualization helps track the relationship among classes and interfaces.
    More about the tool can be found at:   http://www.umlgraph.org/index.html
   
-   This tool uses dot.  to install on Ubuntu do:
-   sudo apt-get install graphviz
-   More info for other platforms at:  http://www.graphviz.org/
-   -->
-   <target name="umljavadocs" depends="jar" description="Build HTML including UML diagrams from JavaDoc. Requires graphviz for the UML diagrams.">
-	   <path id="uml.source.path">
-           <pathelement path="${basedir}/igb/src/"/>
-		   <pathelement path="${basedir}/genometryImpl/src/"/>
-		   <pathelement path="${basedir}/main/src/"/>
-		   <pathelement path="${basedir}/common/src/"/>
-       </path>
-        <javadoc sourcepathref="uml.source.path" packagenames="*" destdir="doc" 
-                 private="true">
-                <doclet name="org.umlgraph.doclet.UmlGraphDoc" path="${basedir}/ext/UmlGraph-5.4.jar">
-                        <param name="-inferrel"/>
-                        <param name="-inferdep"/>
-                        <param name="-hide" value="java.*"/>
-                        <param name="-collpackages" value="java.util.*"/>
-                        <param name="-qualify"/>
-                        <param name="-postfixpackage"/>
-                        <param name="-nodefontsize" value="9"/>
-                        <param name="-nodefontpackagesize" value="7"/>
-                        <param name="-link" value="http://java.sun.com/j2se/1.5.0/docs/guide/javadoc/doclet/spec"/>
-                        <param name="-link" value="http://java.sun.com/j2se/1.5/docs/api"/>
-                </doclet>
-        </javadoc>
-</target>
+	This tool uses dot.  to install on Ubuntu do:
+	sudo apt-get install graphviz
+	More info for other platforms at:  http://www.graphviz.org/
+	-->
+	<target name="umljavadocs" depends="jar" description="Build HTML including UML diagrams from JavaDoc. Requires graphviz for the UML diagrams.">
+		<path id="uml.source.path">
+			<pathelement path="${basedir}/igb/src/"/>
+			<pathelement path="${basedir}/genometryImpl/src/"/>
+			<pathelement path="${basedir}/main/src/"/>
+			<pathelement path="${basedir}/common/src/"/>
+		</path>
+		<javadoc sourcepathref="uml.source.path" packagenames="*" destdir="doc" 
+				 private="true">
+			<doclet name="org.umlgraph.doclet.UmlGraphDoc" path="${basedir}/ext/UmlGraph-5.4.jar">
+				<param name="-inferrel"/>
+				<param name="-inferdep"/>
+				<param name="-hide" value="java.*"/>
+				<param name="-collpackages" value="java.util.*"/>
+				<param name="-qualify"/>
+				<param name="-postfixpackage"/>
+				<param name="-nodefontsize" value="9"/>
+				<param name="-nodefontpackagesize" value="7"/>
+				<param name="-link" value="http://java.sun.com/j2se/1.5.0/docs/guide/javadoc/doclet/spec"/>
+				<param name="-link" value="http://java.sun.com/j2se/1.5/docs/api"/>
+			</doclet>
+		</javadoc>
+	</target>
 
 </project>
