--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,52 @@ www/release_notes/images/Thumbs.db
 /core/*/junitvmwatcher*
 /igb_exe.jar
 /nbproject/genfiles.properties
+/core/HeatmapEditor/target/
+/core/common/target/
+/core/genometryImpl/target/
+/core/igb/target/
+/core/igbSwingExt/target/
+/core/igb_service/target/
+/core/window_service/target/
+/plugins/AnnotationTab/target/
+/plugins/Bookmark/target/
+/plugins/DASRegistryServerType/target/
+/plugins/RubyScript/target/
+/plugins/PythonScript/target/
+/plugins/OverlapAnnotationOperator/target/
+/plugins/ParentOperators/target/
+/plugins/PropertyView/target/
+/plugins/GraphTab/target/
+/plugins/ApolloLibrary/target/
+/plugins/SearchModeLucene/target/
+/plugins/SearchModeSymmetryFilter/target/
+/plugins/SearchModeLength/target/
+/plugins/SearchView/target/
+/plugins/SequenceViewer/target/
+/plugins/Survey/target/
+/plugins/TableView/target/
+/plugins/TallyHandler/target/
+/plugins/ThousandGenomesServerType/target/
+/plugins/Thresholding/target/
+/plugins/TranscriptIsoform/target/
+/plugins/Tutorial/target/
+/plugins/TutorialHelper/target/
+/plugins/Update/target/
+/plugins/window_service_def/target/
+/plugins/plugins_page/target/
+/main/target/
+/plugins/BigBedHandler/target/
+/plugins/BigWigHandler/target/
+/plugins/BAMIndexer/target/
+/plugins/SampleSelection/target/
+/plugins/RestrictionSites/target/
+/plugins/SearchModeIdOrProps/target/
+/distribution/target/
+/core/sharedLibWrapper/target/
+/plugins/IGBScript/target/
+/plugins/ExternalView/target/
+/plugins/KeyWordSearch/target/
+/plugins/NCBIBlast/target/
+/plugins/NCBIPrimer/target/
+/target/
+./gradle/
