--- a/.gitignore
+++ b/.gitignore
@@ -179,6 +179,22 @@ www/release_notes/images/Thumbs.db
 /plugins/KeyWordSearch/target/
 /plugins/NCBIBlast/target/
 /plugins/NCBIPrimer/target/
+/developmentPlugins/BAMIndexer/target/
+/developmentPlugins/DASRegistryServerType/target/
+/developmentPlugins/FindAnnotations/target/
+/developmentPlugins/GeometricMean/target/
+/developmentPlugins/MergeAnnotationOperator/target/
+/developmentPlugins/OverlapAnnotationOperator/target/
+/developmentPlugins/ParentOperators/target/
+/developmentPlugins/PythonScript/target/
+/developmentPlugins/RubyScript/target/
+/developmentPlugins/SampleSelection/target/
+/developmentPlugins/SearchModeSymmetryFilter/target/
+/developmentPlugins/TableView/target/
+/developmentPlugins/TallyHandler/target/
+/developmentPlugins/ThousandGenomesServerType/target/
+/developmentPlugins/TranscriptIsoform/target/
+/developmentPlugins/TutorialHelper/target/
 /target/
 .gradle/
 .gradle/1.12/
